<resources>
    <string name="app_name">test</string>
    <string-array name="adults">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="children">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="btnAccommodation">Accommodation</string>
    <string name="btnDates">Dates</string>
    <string name="btnDestination">Destination</string>
    <string name="btnDepart">Depart</string>
    <string name="btnCreate">Create</string>
    <string name="btnExisting">Existing</string>
    <string name="btnDoneDestination">DONE</string>
    <string name="checkAlaska">Alaska Cruises</string>
    <string name="checkBahamas">Bahamas Cruises</string>
    <string name="checkCaribbean">Caribbean Cruises</string>
    <string name="checkHawaii">Hawaii Cruises</string>
    <string name="checkMexico">Mexico Cruises</string>
    <string name="checkBermuda">Bermuda Cruises</string>
    <string name="checkEurope">Europe Cruises</string>
    <string name="btnResetDestination">RESET</string>

    <string name="Date1">January</string>
    <string name="Date2">February</string>
    <string name="Date3">March</string>
    <string name="Date4">April</string>
    <string name="Date5">May</string>
    <string name="Date6">June</string>
    <string name="Date7">July</string>
    <string name="Date8">August</string>
    <string name="Date9">September</string>
    <string name="Date10">October</string>
    <string name="Date11">November</string>
    <string name="Date12">December</string>
    <string name="DateYear">2020</string>

    <string name="checkVancouver">Vancouver</string>

    <string name="checkVancouverCanada">Vancouver,Bc,Canada</string>
    <string name="checkBarcelonaSpain">Barcelona,Spain</string>
    <string name="checkCopenhagenDenmark">Copenhagen,Denmark</string>
    <string name="checkSanJuanPuertoRico">San Juan,Puerto Rico</string>
    <string name="checkPortCanaveralFlorida">Port Canaveral, Florida</string>
    <string name="checkSanDiegoCalifornia">San Diego, California</string>
    <string name="checkHonoluluHawaii">Honolulu, Hawaii</string>
    <string name="btnDoneDepart">DONE</string>
    <string name="btnResetDepart">RESET</string>

    <string name="warningDestination">Unfortunately Only Alaska Available Right Now!!!</string>
    <string name="txtWelcome">Welcome</string>
    <string name="btnSignUpWelcome">Sign Up</string>
    <string name="btnLogInWelcome">Log In</string>
    <string name="imgDescriptionWelcome">description</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="txtSignUpPage">Sign Up</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="hintName">Name</string>
    <string name="hintPhone">Phone</string>
    <string name="hintAddress">Address</string>

    <string name="ApplicationDisplayName">Disney Cruise</string>
    <string name="txtLoginPage">Log In</string>
    <string name="select_stateroom_type">Select Stateroom Type</string>
    <string name="oceanview">OceanView</string>
    <string name="inside">Inside</string>
    <string name="these_are_our_most_spacious_non_concierge_staterooms_each_with_a_private_verandah_some_with_partial_views">These are our most spacious non-Concierge staterooms, each with a private verandah (some with partial views).</string>
    <string name="unwind_in_roomy_quarters_adorned_in_a_charming_nautical_motif_with_a_real_porthole_window_or_possibly_2">Unwind in roomy quarters adorned in a charming nautical motif, with a real porthole window—or possibly 2!</string>
    <string name="verandah">Verandah</string>
    <string name="sail_away_in_a_generous_sized_stateroom_with_a_nautical_motif_and_porthole_mirror_no_exterior_view">Sail away in a generous-sized stateroom with a nautical motif and porthole mirror (no exterior view).</string>
    <string name="dateSelection_2nd">2nd</string>
    <string name="dateSelection_11th">11th</string>
    <string name="dateSelection_21st">21st</string>
    <string name="dateSelection_text_day">Select your desired period to travel</string>

    <string name="btnAft">Aft</string>
    <string name="btnMidShip">MidShip</string>
    <string name="btnForward">Forward</string>
    <string name="btnDeck1Aft">Deck 1        +$300</string>
    <string name="btnDeck2Aft">Deck 2        +$400</string>
    <string name="btnDeck3Aft">Deck 3        +$500</string>
    <string name="btnDeck1MidShip">Deck 1        +$200</string>
    <string name="btnDeck2MidShip">Deck 2        +$300</string>
    <string name="btnDeck3MidShip">Deck 3        +$400</string>
    <string name="btnDeck1Forward">Deck 1        +$100</string>
    <string name="btnDeck2Forward">Deck 2        +$200</string>
    <string name="btnDeck3Forward">Deck 3        +$300</string>
    <string name="btnDeck1Forward1000">1000</string>
    <string name="btnDeck1Forward1002">1002</string>
    <string name="btnDeck1Forward1004">1004</string>
    <string name="btnDeck1Forward1006">1006</string>
    <string name="btnDeck1Forward1008">1008</string>
    <string name="btnSubmitForwardDeck1">Next</string>

    <string name="btnDeck1Forward2000">2000</string>
    <string name="btnDeck1Forward2002">2002</string>
    <string name="btnDeck1Forward2004">2004</string>
    <string name="btnDeck1Forward2006">2006</string>
    <string name="btnDeck1Forward2008">2008</string>

    <string name="btnDeck1MidShip1010">1010</string>
    <string name="btnDeck1MidShip1012">1012</string>
    <string name="btnDeck1MidShip1014">1014</string>
    <string name="btnDeck1MidShip1016">1016</string>

    <string name="btnDeck1MidShip2010">2010</string>
    <string name="btnDeck1MidShip2012">2012</string>
    <string name="btnDeck1MidShip2014">2014</string>
    <string name="btnDeck1MidShip2016">2016</string>

    <string name="btnDeck1Aft1020">1020</string>
    <string name="btnDeck1Aft1022">1022</string>
    <string name="btnDeck1Aft1024">1024</string>
    <string name="btnDeck1Aft1026">1026</string>

    <string name="btnDeck2Aft2020">2020</string>
    <string name="btnDeck2Aft2022">2022</string>
    <string name="btnDeck2Aft2024">2024</string>
    <string name="btnDeck2Aft2026">2026</string>


    <string name="btnGoState">Go to StateRoom</string>
    <string name="confirmShipLocation">Location in the Ship</string>
    <string name="stateRoomCat">Stateroom Category</string>
    <string name="stateRoomTypeConf">Stateroom Type</string>

    <string name="AccSelection">Accommodation  Selection</string>
    <string name="txtAdults">Adults</string>
    <string name="txtChildren">Children</string>
    <string name="addStateroom">Add Another Stateroom</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnReset">Clear All</string>
    <string name="ConfPageMessage">Check  your Selection</string>
    <string name="CardDetails">Card Details</string>
    <string name="CardN">Card Number</string>
    <string name="expDate">Expire Date</string>
    <string name="cvvTextView">CVV</string>
    <string name="payment">Submit Payment</string>
    <string name="amtToPay">Amount to be paid</string>

    <string name="btnAdventure">Adventures</string>
    <string name="btnOrderWine">Order Drinks</string>
    <string name="btnEditProfile">Edit Profile</string>
    <string name="btnCancelTrip">Cancel Trip</string>
    <string name="btnExit">Log Out</string>

    <string name="fee">Fee</string>
    <string name="number_of_children">Number of Children</string>
    <string name="number_of_adults">Number of Adults</string>
    <string name="stateroom_type">StateRoom Type</string>
    <string name="stateroom_category">StateRoom Category</string>
    <string name="departure_port">Departure Port</string>
    <string name="departure_date">Departure Date</string>
    <string name="details">Details</string>
    <string name="room_location_and_deck">Room Location and Deck</string>
    <string name="item">Item</string>
    <string name="stateroom_qtd">StateRoom QTD</string>
    <string name="destination">Destination</string>
    <string name="preference_file_key">cruise_preference</string>
    <string name="paymentSection">Payment Section</string>
    <string name="select_the_adventure_pack_of_your_choice">Select the Adventure Pack of your choice</string>
    <string name="btnInvoicePage">Go to Invoice Page</string>


</resources>
