<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".DestinationPageActivity">

    <TextView
        android:id="@+id/txtWarningDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/warningDestination"

        android:textColor="#F2000C"
        android:textStyle="italic" />

    <CheckBox
        android:id="@+id/checkboxAlaska"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/checkAlaska"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/checkboxBahamas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkboxAlaska"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="152dp"
        android:text="@string/checkBahamas"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/checkboxBermuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkboxBahamas"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="208dp"
        android:text="@string/checkBermuda"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/checkboxCaribbean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="267dp"
        android:text="@string/checkCaribbean"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/checkboxEurope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="320dp"
        android:text="@string/checkEurope"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/checkboxHawaii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="373dp"
        android:text="@string/checkHawaii"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/checkboxMexico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="427dp"
        android:text="@string/checkMexico"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnDoneDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnDoneDestination"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnResetDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDoneDestination"
        android:text="@string/btnResetDestination"
        android:textSize="22sp" />

</RelativeLayout>