<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.SelectRoomForwardDeck2Activity">

    <ImageView
        android:contentDescription=""
        android:layout_width="match_parent"
        android:layout_height="558dp"
        android:src="@drawable/forwarddeck1"
        android:id="@+id/imgDeck1Forward"
        />

    <Button
        android:id="@+id/btnDeck1Forward2000"
        android:layout_width="75dp"
        android:layout_height="37dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:text="@string/btnDeck1Forward2000" />

    <Button
        android:id="@+id/btnDeck1Forward2002"
        android:layout_width="77dp"
        android:layout_height="40dp"
        android:layout_marginTop="410dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/btnDeck1Forward2002" />

    <Button
        android:id="@+id/btnDeck1Forward2004"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="443dp"
        android:text="@string/btnDeck1Forward2004" />

    <Button
        android:id="@+id/btnDeck1Forward2006"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginTop="472dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/btnDeck1Forward2006" />

    <Button
        android:id="@+id/btnDeck1Forward2008"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginTop="472dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:text="@string/btnDeck1Forward2008"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgDeck1Forward"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:id="@+id/btnSubmitForwardDeck2"
        android:text="@string/btnSubmitForwardDeck1"
        />

</RelativeLayout>
