<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.SelectRoomForwardDeck1">

    <ImageView
        android:contentDescription=""
        android:layout_width="match_parent"
        android:layout_height="558dp"
        android:src="@drawable/forwarddeck1"
        android:id="@+id/imgDeck1Forward"
        />

    <Button
        android:id="@+id/btnDeck1Forward1000"
        android:layout_width="75dp"
        android:layout_height="35dp"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:text="@string/btnDeck1Forward1000" />

    <Button
        android:id="@+id/btnDeck1Forward1002"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginTop="410dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/btnDeck1Forward1002" />

    <Button
        android:id="@+id/btnDeck1Forward1004"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="443dp"
        android:text="@string/btnDeck1Forward1004" />

    <Button
        android:id="@+id/btnDeck1Forward1006"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:layout_marginTop="477dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/btnDeck1Forward1006" />

    <Button
        android:id="@+id/btnDeck1Forward1008"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginTop="472dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"

        android:text="@string/btnDeck1Forward1008"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgDeck1Forward"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:id="@+id/btnSubmitForwardDeck1"
        android:text="@string/btnSubmitForwardDeck1"
        />

</RelativeLayout>



