<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtSignUpPage"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtRegister"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hintEmail"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill"
        />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:layout_below="@id/etEmail"
        tools:ignore="Autofill"
        />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/hintConfirmPassword"
        android:layout_below="@id/etPassword"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        tools:ignore="Autofill"
        />
    <EditText
        android:id="@+id/etName"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        tools:ignore="Autofill"
        />
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etName"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        android:hint="@string/hintPhone"
        tools:ignore="Autofill"
        />
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhone"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/hintAddress"
        android:ems="10"
        tools:ignore="Autofill"
        />

    <Button
        android:id="@+id/btnSingUpPage"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUpWelcome"
        android:layout_below="@id/etAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        />



</RelativeLayout>