<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.SelectRoomAftDeck">

    <ImageView
        android:contentDescription=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/aftselectroom"
        android:id="@+id/imgDeck1Aft"
        />

    <Button
        android:id="@+id/btnDeck1Aft1020"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="55dp"
        android:text="@string/btnDeck1Aft1020" />

    <Button
        android:id="@+id/btnDeck1Aft1022"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="85dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/btnDeck1Aft1022" />

    <Button
        android:id="@+id/btnDeck1Aft1024"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="270dp"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="55dp"
        android:text="@string/btnDeck1Aft1024" />

    <Button
        android:id="@+id/btnDeck1Aft1026"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="85dp"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:text="@string/btnDeck1Aft1026" />


    <Button
        android:layout_marginTop="130dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgDeck1Aft"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:id="@+id/btnSubmitAftDeck1"
        android:text="@string/btnSubmitForwardDeck1"
        />
</RelativeLayout>
