<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.SelectRoomMidShipDeck1">

    <ImageView
        android:contentDescription=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/midshiproomselect"
        android:layout_marginTop="140dp"
        android:id="@+id/imgDeck1MidShip"
        />

    <Button
        android:id="@+id/btnDeck1MidShip1010"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="155dp"
        android:text="@string/btnDeck1MidShip1010" />

    <Button
        android:id="@+id/btnDeck1MidShip1012"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/btnDeck1MidShip1012" />

    <Button
        android:id="@+id/btnDeck1MidShip1014"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="225dp"
        android:text="@string/btnDeck1MidShip1014" />

    <Button
        android:id="@+id/btnDeck1MidShip1016"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginTop="260dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/btnDeck1MidShip1016" />


    <Button
        android:layout_marginTop="160dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgDeck1MidShip"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:id="@+id/btnSubmitMidShipDeck1"
        android:text="@string/btnSubmitForwardDeck1"
        />
</RelativeLayout>
