<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.ExistingUserActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdventure"
        android:textSize="22sp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnAdventure"
        />

    <Button
        android:id="@+id/btnOrderWine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdventure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/btnOrderWine"
        android:textSize="22sp"
        />
    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnOrderWine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/btnEditProfile"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/btnExit"
        android:layout_below="@id/btnEditProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        />



</RelativeLayout>
